--- a/yarıs.html
+++ b/yarıs.html
@@ -115,45 +115,46 @@
             </div>
       </div>
 
-        <!-- ilk katman içerik -->
+        <!-- ilk katman içerik -->    
         <div class="container mt-5" style="display: flex;">
-            <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="resim/need for speed.jpg" class="card-img-top" style="background-color: gray;" alt="...">
-                <div class="card-body" >
-                  <h5 class="card-title">Need For Speed:Heat</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-                </div>
-              </div>
-              <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Forza Horizon 4</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-                </div>
-              </div>
-
-
-              <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Dirt Rally 2.0</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-                </div>
-              </div>        
-    
-              <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Mario Kart 8 Deluxe</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-                </div>
+          <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
+              <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+              <div class="card-body" >
+                <h5 class="card-title">Forza Horizon 4</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
               </div>
             </div>
+
+
+            <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
+              <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Need For Speed:Heat</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dirt Relly 2.0 1</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+          </div>
+        </div>      
+
+        <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> Mario Kart 8 Deluxe</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+          </div>
         </div>
+      </div>
+      </div>
 
         <!-- İkinci Katman İçerik -->
         <div class="container mt-5" style="display: flex;">
