--- a/bilgisayar.html
+++ b/bilgisayar.html
@@ -9,7 +9,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+          
+    <style>
+            .box{
+            width: 200px;
+            height: 200px;
+            transition: 1s;
+        }
+        .box:hover{
+            transform: scale(1.1);
+            z-index: 1;
+        }
+    </style>
+  </head>
 <body>
     <div class="sayfa">
         <!-- menü kısmı -->
@@ -95,13 +107,13 @@
           <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="resim/god of war.jpg" class="d-block w-100">
+                  <img src="resim/need for speed.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/god of war.jpg" class="d-block w-100">
+                  <img src="resim/calisto.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/god of war.jpg" class="d-block w-100">
+                  <img src="resim/rdr2.jpg" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -117,18 +129,18 @@
 
         <!-- ilk katman içerik -->
         <div class="container mt-5" style="display: flex;">
-            <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+            <div class="card box" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
+                <img src="resim/doom ethernal.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
-                  <h5 class="card-title">Need For Speed:Heat</h5>
+                  <h5 class="card-title">Doom Ethernal</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/rdr2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Forza Horizon 4</h5>
+                  <h5 class="card-title">Red Dead Redemption 2</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
@@ -136,18 +148,18 @@
 
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/calisto.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Dirt Rally 2.0</h5>
+                  <h5 class="card-title">Calisto Protocol</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>        
     
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Mario Kart 8 Deluxe</h5>
+                  <h5 class="card-title">Need For Speed</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
@@ -158,9 +170,9 @@
         <!-- İkinci Katman İçerik -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/god of war.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
-                  <h5 class="card-title">Wreckfest</h5>
+                  <h5 class="card-title">God Of War</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
