--- a/aksiyon.html
+++ b/aksiyon.html
@@ -126,7 +126,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/valhala (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Assasin Cread Valhala</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -168,7 +168,7 @@
 
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/titanfall (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Titanfall</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -219,7 +219,7 @@
 
               
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/for honor(1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">For Honor</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
