--- a/bilgisayar.html
+++ b/bilgisayar.html
@@ -180,27 +180,27 @@
 
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/outlast.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Gran Turismo Sport</h5>
+                  <h5 class="card-title">Outlast</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resim/crysis.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">F1 2021</h5>
+              <h5 class="card-title">Crysis</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>      
 
           <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resim/detroit.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Assetto Corsa</h5>
+              <h5 class="card-title">Detroit Became Human</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
@@ -211,9 +211,9 @@
         <!-- Üçüncü Katman İçerik  -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/elden ring.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
-                  <h5 class="card-title">Project CARS 2</h5>
+                  <h5 class="card-title">Elden Ring</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
@@ -221,9 +221,9 @@
 
               
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/dying light.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Burnout Paradise Remastered</h5>
+                  <h5 class="card-title">Dying Light</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
@@ -231,18 +231,18 @@
 
               
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/little.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">WRC 9</h5>
+                  <h5 class="card-title">Little Nightmares</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>    
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/witcher.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Roket League</h5>
+                  <h5 class="card-title">Witcher 3 Wild Hunt</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
