--- a/korku.html
+++ b/korku.html
@@ -172,7 +172,7 @@
               </div>
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resim/outlast2 (1).jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Outlast 2</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -181,7 +181,7 @@
           </div>      
 
           <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resim/silent.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Silent Hill</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -194,7 +194,7 @@
         <!-- Üçüncü Katman İçerik  -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/alan wake (1).jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Alan Wake</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
