--- a/macera.html
+++ b/macera.html
@@ -114,7 +114,7 @@
         <!-- ilk katman içerik -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/subnautica(1).jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Subnautica</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -205,7 +205,7 @@
 
               
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="resim/" class="card-img-top" alt="...">
+                <img src="resim/ratchet.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ratchet And Clank</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -215,7 +215,7 @@
 
               
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="resim/" class="card-img-top" alt="...">
+                <img src="resim/watch dogs.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Watch Dogs</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -224,7 +224,7 @@
               </div>    
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/life in(1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Life is Strange</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
