--- a/xbox.html
+++ b/xbox.html
@@ -118,15 +118,15 @@
         <!-- ilk katman içerik -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/alien.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
-                  <h5 class="card-title">Need For Speed:Heat</h5>
+                  <h5 class="card-title">Alien</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/dead space.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Forza Horizon 4</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -136,9 +136,9 @@
 
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/valhala (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Dirt Rally 2.0</h5>
+                  <h5 class="card-title">Assain Creed Valhala</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
