--- a/yarıs.html
+++ b/yarıs.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yarış</title>
-    <link rel="stylesheet" href="örnek.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -95,13 +94,13 @@
           <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
+                  <img src="resim/forza.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="resim/wrc.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
                   <img src="resim/need for speed.jpg" class="d-block w-100">
-                </div>
-                <div class="carousel-item">
-                  <img src="resim/god of war.jpg" class="d-block w-100">
-                </div>
-                <div class="carousel-item">
-                  <img src="resim/god of war.jpg" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -118,7 +117,7 @@
         <!-- ilk katman içerik -->    
         <div class="container mt-5" style="display: flex;">
           <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-              <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+              <img src="resim/forza.jpg" class="card-img-top" style="background-color: gray;" alt="...">
               <div class="card-body" >
                 <h5 class="card-title">Forza Horizon 4</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,7 +136,7 @@
             </div>
 
             <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="resim/dirt.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Dirt Relly 2.0 1</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -146,7 +145,7 @@
         </div>      
 
         <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="resim/mario.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"> Mario Kart 8 Deluxe</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -159,7 +158,7 @@
         <!-- İkinci Katman İçerik -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/wreckfest.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Wreckfest</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -169,7 +168,7 @@
 
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/gran.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Gran Turismo Sport</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -178,7 +177,7 @@
               </div>
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resim/f1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">F1 2021</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -187,7 +186,7 @@
           </div>      
 
           <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resim/asetto (1).jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Assetto Corsa</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -200,7 +199,7 @@
         <!-- Üçüncü Katman İçerik  -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/project.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Project CARS 2</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -210,7 +209,7 @@
 
               
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/paradies.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Burnout Paradise Remastered</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -220,7 +219,7 @@
 
               
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/wrc.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">WRC 9</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -229,7 +228,7 @@
               </div>    
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/roket.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Roket League</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
